test/corpus/variables.txt
==========
Variable reference
==========

:put $myVar

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (variable_reference
      (identifier))))

==========
Variable in string
==========

:put "Hello $name"

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (literal
      (string))))

==========
Multiple variable references
==========

:put $a $b $c

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (function_call
      function: (variable_reference
        (identifier))
      (variable_reference
        (identifier)))
    (variable_reference
      (identifier))))

==========
Array access with arrow
==========

:put ($arr->"key")

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (array_access
        (variable_reference
          (identifier))
        (string)))))

==========
Array access with numeric key
==========

:put ($arr->0)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (array_access
        (variable_reference
          (identifier))
        (number)))))

==========
Numeric and global command variable references
==========

:put $1
:put $:resolve

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (variable_reference))
  (global_command
    (global_command_name
      (identifier))
    (variable_reference
      (global_command_name
        (identifier)))))

==========
Quoted variable reference
==========

:put $"my var"

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (variable_reference
      (string))))
